--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "stmik.andy.khsonline"
+        applicationId "uinbdg.skripsi.kopertais"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -39,4 +39,5 @@ dependencies {
         transitive = true
     }
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+    compile 'com.google.android.gms:play-services-maps:11.0.2'
 }
