--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="stmik.andy.khsonline">
+    package="uinbdg.skripsi.kopertais">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -9,18 +12,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AdminActivity">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity android:name=".Activities.MasterUnivActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.MasterAdminActivity"></activity>
-        <activity android:name=".Activities.MasterDosenActivity"></activity>
-        <activity android:name=".Activities.MasterKelasActivity"></activity>
-        <activity android:name=".Activities.MasterMahasiswaActivity"></activity>
-        <activity android:name=".Activities.MasterMatkulActivity"></activity>
+        <activity android:name=".Activities.DetailUnivActivity" />
+        <activity android:name=".Activities.PerjalananActivity" />
+        <activity android:name=".Activities.MapsActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
