--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".Activities.MasterUnivActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,8 +26,9 @@
         <activity android:name=".Activities.DetailUnivActivity" />
         <activity android:name=".Activities.PerjalananActivity" />
         <activity android:name=".Activities.MapsActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".Activities.MasterUnivActivity" />
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Activities.MasterPerjalananActivity"></activity>
     </application>
 
 </manifest>
