--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,12 +29,12 @@
         <activity android:name=".Activities.MasterUnivActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Activities.MasterPerjalananActivity" />
-        <activity android:name=".Activities.MasterRekomendasiActivity" />
-        <activity android:name=".Activities.MasterPerjalananDinasActivity" />
+        <activity android:name=".Activities.baru.MasterRekomendasiActivity" />
+        <activity android:name=".Activities.baru.MasterPerjalananDinasActivity" />
         <activity android:name=".Activities.MenuActivity" />
-        <activity android:name=".Activities.TambahRekomendasiActivity" />
+        <activity android:name=".Activities.baru.TambahRekomendasiActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".Activities.InputPerjalananDinasActvity"></activity>
+        <activity android:name=".Activities.baru.InputPerjalananDinasActvity"></activity>
     </application>
 
 </manifest>
